--- a/scooter/src/app/header/header.component.html
+++ b/scooter/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<div>
+  <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam" class="rounded float-left">
+  <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord" class="rounded float-right">
+  <h2>E-bikes Amsterdam</h2>
+  <h3>subtitle</h3>
+</div>
