--- a/scooter/src/app/header/header.component.html
+++ b/scooter/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<div>
-  <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam" class="rounded float-left">
-  <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord" class="rounded float-right">
-  <h2>E-bikes Amsterdam</h2>
-  <h3>subtitle</h3>
+<div id="header" class="container">
+  <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam">
+  <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord">
+  <h1 id="titel">E-bikes Amsterdam</h1>
+  <h3 id="subtitel">Get your kicks on Route 66!</h3>
 </div>
