--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -1,2 +1,13 @@
-<h2>welcome component works!</h2>
-<h3>subtitle</h3>
+<div id="content" class="container">
+  <div class="row">
+    <div id="leftcontent" class="col align-self-start">
+      <h1>hoi</h1>
+    </div>
+    <div id="centercontent" class="col align-self-center">
+      <h1>hoi</h1>
+    </div>
+    <div id="rightcontent" class="col align-self-end">
+      <h1>hoi</h1>
+    </div>
+  </div>
+</div>
