--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -1,13 +1,27 @@
-<div id="content" class="container">
+<div id="leftcontent" class="container-sm content">
   <div class="row">
-    <div id="leftcontent" class="col align-self-start">
-      <h1>hoi</h1>
+    <div class="col-3">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-bs-toggle="dropdown" aria-expanded="false">
+          Amsterdam
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdwon-item" href="#">Leidseplein</a></li>
+          <li><a class="dropdwon-item" href="#">Haarlemmerweg</a></li>
+          <li><a class="dropdwon-item" href="#">Amstelveenseweg</a></li>
+        </ul>
+      </div>
     </div>
-    <div id="centercontent" class="col align-self-center">
-      <h1>hoi</h1>
+    <div class="col-3">
+      <div id="centercontent2" class="container-sm content">
+        <h1>hoi</h1>
+      </div>
     </div>
-    <div id="rightcontent" class="col align-self-end">
-      <h1>hoi</h1>
+    <div class="col-3">
+      <div id="rightcontent2" class="container-sm content">
+        <h1>hoi</h1>
+      </div>
     </div>
   </div>
 </div>
