--- a/scooter/src/app/header/header.component.css
+++ b/scooter/src/app/header/header.component.css
@@ -14,12 +14,13 @@
 }
 
 #header{
+  display: block;
   position: absolute;
   top: 0%;
   width: 100%;
   left: 0%;
   right: 0%;
-  height: auto;
+  height: 12%;
   background-color: bisque;
 }
 
