--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -1,27 +1,38 @@
-<div id="leftcontent" class="container-sm content">
-  <div class="row">
-    <div class="col-3">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-bs-toggle="dropdown" aria-expanded="false">
-          Amsterdam
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <li><a class="dropdwon-item" href="#">Leidseplein</a></li>
-          <li><a class="dropdwon-item" href="#">Haarlemmerweg</a></li>
-          <li><a class="dropdwon-item" href="#">Amstelveenseweg</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-3">
-      <div id="centercontent2" class="container-sm content">
-        <h1>hoi</h1>
-      </div>
-    </div>
-    <div class="col-3">
-      <div id="rightcontent2" class="container-sm content">
-        <h1>hoi</h1>
+<!doctype html>
+<html lang="en">
+<body>
+<main>
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          </div>
+        </div>
+
+
+
+
       </div>
     </div>
   </div>
-</div>
+</main>
+</body>
+</html>
+
