--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -6,30 +6,89 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row">
+
+          <div class="col-sm-12 col-md-3 col-margin">
+            <p class="fw-bold small m-0 p-0">STAD</p>
+            <select class="form-select" aria-label="Default select example">
+              <option value="1" selected>Amsterdam</option>
+              <option value="2">Leiden</option>
+              <option value="3">Den Haag</option>
+            </select>
+            <p class="fw-bold small mt-3 mb-0 p-0">STAD REGIO</p>
+            <div class="list-group">
+              <button type="button" class="list-group-item list-group-item-action">
+                Leidseplein <span>300</span>
+              </button>
+              <button type="button" class="list-group-item list-group-item-action">
+                Haarlemmerweg <span>150</span>
+              </button>
+              <button type="button" class="list-group-item list-group-item-action">
+                Amstelveenweg <span>54</span>
+              </button>
+            </div>
+          </div>
+
+
 
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                     xmlns="http://www.w3.org/2000/svg"
+                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                     focusable="false">
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#55595c"/>
+                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                </svg>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                     xmlns="http://www.w3.org/2000/svg"
+                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                     focusable="false">
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#55595c"/>
+                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                </svg>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                     xmlns="http://www.w3.org/2000/svg"
+                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                     focusable="false">
+                  <title>Placeholder</title>
+                  <rect width="100%" height="100%" fill="#55595c"/>
+                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                </svg>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          </div>
+        <h5>Canel Tour</h5>
+          <p>Tour around the Canels. Visit the old warehouse that helped Amsterdam become a great city! </p>
+          <h5>Bike location:</h5>
+          <p>Leidseplein</p>
+          <h6>Approximate duration:</h6>
+          <p>2 hours and 10 minutes</p>
         </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-          </div>
-        </div>
-
 
 
 
       </div>
+
     </div>
   </div>
 </main>
