--- a/scooter/src/app/header/header.component.html
+++ b/scooter/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div id="header" class="container">
+<div id="header" class="container-fluid">
   <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam">
   <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord">
   <h1 id="titel">E-bikes Amsterdam</h1>
