--- a/scooter/src/app/app.component.html
+++ b/scooter/src/app/app.component.html
@@ -1,4 +1,5 @@
   <!-- Resources -->
-<!--  <app-header></app-header>-->
+  <app-header></app-header>
+  <app-navbar></app-navbar>
   <app-welcome></app-welcome>
 
