--- a/scooter/src/app/header/header.component.html
+++ b/scooter/src/app/header/header.component.html
@@ -2,5 +2,6 @@
   <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam">
   <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord">
   <h1 id="titel">E-bikes Amsterdam</h1>
-  <h3 id="subtitel">Get your kicks on Route 66!</h3>
+    <div [ngModel]="date"></div>
+    <h3 id="subtitel">Get your kicks on Route 66!</h3>
 </div>
