--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -37,42 +37,68 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                     xmlns="http://www.w3.org/2000/svg"
-                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                     focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c"/>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                </svg>
+                <div class="box">
+                  <img src="assets/images/fietsenamsterdamcover.jpg"/>
+                </div>
               </div>
             </div>
 
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                     xmlns="http://www.w3.org/2000/svg"
-                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                     focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c"/>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                </svg>
+                <div class="box">
+                  <img src="assets/images/fietsenamsterdamcover.jpg"/>
+                </div>
               </div>
             </div>
 
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                     xmlns="http://www.w3.org/2000/svg"
-                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                     focusable="false">
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c"/>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                </svg>
+                <div class="box">
+                  <img src="assets/images/fietsenamsterdamcover.jpg"/>
+                </div>
               </div>
             </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="box">
+                  <img src="assets/images/fietswater.jpg"/>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="box">
+                  <img src="assets/images/fietswater.jpg"/>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="box">
+                  <img src="assets/images/fietswater.jpg"/>
+                </div>
+              </div>
+            </div>
+
+
+
+<!--            <div class="col">-->
+<!--              <div class="card shadow-sm">-->
+<!--                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"-->
+<!--                     xmlns="http://www.w3.org/2000/svg"-->
+<!--                     role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"-->
+<!--                     focusable="false">-->
+<!--                  <title>Placeholder</title>-->
+<!--                  <rect width="100%" height="100%" fill="#55595c"/>-->
+<!--                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>-->
+<!--                </svg>-->
+<!--              </div>-->
+<!--            </div>-->
+
+
           </div>
         </div>
 
@@ -83,6 +109,7 @@
           <p>Leidseplein</p>
           <h6>Approximate duration:</h6>
           <p>2 hours and 10 minutes</p>
+          <button class="btn btn-primary btn-sm">Subscribe</button>
         </div>
 
 
