--- a/scooter/src/app/welcome/welcome.component.css
+++ b/scooter/src/app/welcome/welcome.component.css
@@ -11,3 +11,10 @@
     font-size: 3.5rem;
   }
 }
+
+.box img{
+  border: 2px solid black;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
