--- a/scooter/src/app/header/header.component.html
+++ b/scooter/src/app/header/header.component.html
@@ -1,7 +1,20 @@
 <div id="header" class="container-fluid">
-  <img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam">
-  <img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord">
-  <h1 id="titel">E-bikes Amsterdam</h1>
-    <div [ngModel]="date"></div>
-    <h3 id="subtitel">Get your kicks on Route 66!</h3>
+  <div class="row">
+    <div class="col"><img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam"></div>
+    <div class="col"><h1 id="titel">E-bikes Amsterdam</h1></div>
+    <div class="col"><img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord"></div>
+  </div>
+
+
+
+
+  <div class="row">
+    <div class="col">
+      <h6 id="date">{{date}}</h6>
+    </div>
+    <div class="col">
+      <h6 id="subtitel">Get your kicks on Route 66!</h6>
+    </div>
+  </div>
+
 </div>
