--- a/scooter/src/app/scooters/overview31/overview31.component.html
+++ b/scooter/src/app/scooters/overview31/overview31.component.html
@@ -1,1 +1,23 @@
 <p>overview31 works!</p>
+<table class="table table-striped table-md">
+  <thead>
+  <tr>
+    <th>id</th>
+    <th>Tag</th>
+    <th>Status</th>
+    <th>GPS Location</th>
+    <th>Total Mileage</th>
+    <th>Battery Change</th>
+  </tr>
+  </thead>
+  <tbody *ngFor="let scooter of scooters">
+  <tr>
+    <td>{{ scooter.id}}</td>
+    <td>{{ scooter.tag}}</td>
+    <td>{{ scooter.status}}</td>
+    <td>{{ scooter.gpsLocation}}</td>
+    <td>{{ scooter.mileage}}</td>
+    <td>{{ scooter.batteryCharge}}</td>
+  </tr>
+  </tbody>
+</table>
