--- a/scooter/src/app/app.component.html
+++ b/scooter/src/app/app.component.html
@@ -1,5 +1,6 @@
   <!-- Resources -->
   <app-header></app-header>
   <app-navbar></app-navbar>
-  <app-welcome></app-welcome>
+  <div *ngIf="state === 0"><app-welcome></app-welcome></div>
+  <div *ngIf="state === 1"><app-overview31></app-overview31></div>
 
