--- a/scooter/src/app/app.component.html
+++ b/scooter/src/app/app.component.html
@@ -1,6 +1,5 @@
-  <!-- Resources -->
-  <app-header></app-header>
-  <app-navbar></app-navbar>
-  <div *ngIf="state === 0"><app-welcome></app-welcome></div>
-  <div *ngIf="state === 1"><app-overview31></app-overview31></div>
+<!-- Resources -->
+<app-header></app-header>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
