--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -1,11 +1,18 @@
 <div id="navbarHeader" class="container-fluid pt-2">
   <div class="dropdown show pb-2">
-    <a class="btn">
+    <a class="btn" href="">
       Home
     </a>
-    <a class="btn dropdown-toggle"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="btn dropdown-toggle" href="scooters/overview31"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Scooters
     </a>
+
+    <a class="btn ">
+    <select class="form-select" aria-label="Default select example">
+      <option value="1" selected>Scooters</option>
+      <option value="2">Scooter overview</option>
+    </select>
+  </a>
     <a class="btn ">
       <select class="form-select" aria-label="Default select example">
         <option value="1" selected>Amsterdam</option>
@@ -13,6 +20,7 @@
         <option value="3">last month</option>
       </select>
     </a>
+
     <a class="rightnav btn">
       Log in
     </a>
