--- a/scooter/src/app/scooters/overview31/overview31.component.html
+++ b/scooter/src/app/scooters/overview31/overview31.component.html
@@ -18,8 +18,8 @@
         <td>{{ scooter.tag}}</td>
         <td>{{ scooter.status}}</td>
         <td>{{ scooter.gpsLocation}}</td>
-        <td>{{ scooter.mileage}}</td>
-        <td>{{ scooter.batteryCharge}}</td>
+        <td>{{ scooter.mileage}} Km</td>
+        <td>{{ scooter.batteryCharge}} %</td>
       </tr>
       </tbody>
     </table>
