--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -28,12 +28,12 @@
         </li>
 
       </ul>
-      <ul class="nav ">
+      <ul id="navRight" class="nav">
         <li>
-          <a class="rightnav btn">
+          <a class="btn">
             Log in
           </a>
-          <a class="rightnav btn">
+          <a class="btn">
             Sign up
           </a>
         </li>
