navbar items fixed on mobile mode

--- a/scooter/src/app/header/header.component.css
+++ b/scooter/src/app/header/header.component.css
@@ -37,6 +37,13 @@
   text-align: center;
 
 }
-
+@media (max-width: 975px){
+  #wapenlogo{
+    width: 75%;
+  }
+  #fietsbordlogo{
+    width: 40%;
+  }
+}
 
 
