--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -26,14 +26,13 @@
             <a class="dropdown-item" routerLink="/query-param">last month</a>
           </div>
         </li>
-
-      </ul>
-      <ul id="navRight" class="nav">
-        <li>
-          <a class="btn">
-            Log in
-          </a>
-          <a class="btn">
+        <li id="navRight1" class="nav-item">
+            <a class="nav-link" href="#">
+              Log in
+            </a>
+        </li>
+        <li id="navRight2" class="nav-item">
+          <a class="nav-link" href="#">
             Sign up
           </a>
         </li>
