--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -14,16 +14,16 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink="scooters/overview31">Scooters Overview</a>
-            <a class="dropdown-item" routerLink="scooters/overview32">overview32</a>
+            <a class="dropdown-item" routerLink="scooters/overview33">overview33</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Amsterdam
+            My Trips
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="/router-param/ACME">history</a>
-            <a class="dropdown-item" routerLink="/query-param">last month</a>
+            <a class="dropdown-item" routerLink="/router-param/ACME">last month</a>
+            <a class="dropdown-item" routerLink="/query-param">history</a>
           </div>
         </li>
 
