--- a/scooter/src/app/scooters/overview33/overview33.component.html
+++ b/scooter/src/app/scooters/overview33/overview33.component.html
@@ -17,7 +17,7 @@
       <button id="newScooter" class="btn btn-primary" (click)="onNewScooter()">Add Scooter</button>
     </div>
     <div class="col-md-6">
-      <app-detail32 [inputScooter]="selectedScooter" (deletedScooter)="onDelete($event)"></app-detail32>
+      <app-detail33 [inputScooter]="selectedScooter" (unSelectScooter)="unSelect()"></app-detail33>
     </div>
   </div>
 </div>
