--- a/scooter/src/app/scooters/overview34/overview34.component.html
+++ b/scooter/src/app/scooters/overview34/overview34.component.html
@@ -17,7 +17,7 @@
       <button id="newScooter" class="btn btn-primary" (click)="onNewScooter()">Add Scooter</button>
     </div>
     <div class="col-md-6">
-      <app-detail33 [inputScooter]="selectedScooter" (unSelectScooter)="unSelect()"></app-detail33>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
