--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -13,10 +13,10 @@
             Scooters
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="scooters/overview31">Scooters Overview</a>
-            <a class="dropdown-item" routerLink="scooters/overview32">overview32</a>
-            <a class="dropdown-item" routerLink="scooters/overview33">overview33</a>
-            <a class="dropdown-item" routerLink="scooters/overview34">overview34</a>
+            <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview31">Scooters Overview</a>
+            <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview32">overview32</a>
+            <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview33">overview33</a>
+            <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview34">overview34</a>
           </div>
         </li>
         <li class="nav-item dropdown">
