--- a/scooter/src/app/navbar/navbar.component.html
+++ b/scooter/src/app/navbar/navbar.component.html
@@ -17,6 +17,7 @@
             <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview32">overview32</a>
             <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview33">overview33</a>
             <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview34">overview34</a>
+            <a class="dropdown-item" routerLinkActive="table-active" routerLink="scooters/overview35">overview35</a>
           </div>
         </li>
         <li class="nav-item dropdown">
