--- a/scooter/src/app/welcome/welcome.component.html
+++ b/scooter/src/app/welcome/welcome.component.html
@@ -18,13 +18,13 @@
             <p class="fw-bold small mt-3 mb-0 p-0">STAD REGIO</p>
             <div class="list-group">
               <button type="button" class="list-group-item list-group-item-action">
-                Leidseplein <span>300</span>
+                Leidseplein
               </button>
               <button type="button" class="list-group-item list-group-item-action">
-                Haarlemmerweg <span>150</span>
+                Haarlemmerweg
               </button>
               <button type="button" class="list-group-item list-group-item-action">
-                Amstelveenweg <span>54</span>
+                Amstelveenweg
               </button>
             </div>
           </div>
