--- a/scooter/src/app/headers/header/header.component.html
+++ b/scooter/src/app/headers/header/header.component.html
@@ -1,8 +1,8 @@
 <div id="header" class="container-fluid">
   <div class="row">
-    <div class="col"><img src="assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam"></div>
+    <div class="col"><img src="../../../assets/images/logo-amsterdam-756x378.png" id="wapenlogo" alt="Wapen Amsterdam"></div>
     <div class="col"><h1 id="titel">E-bikes Amsterdam</h1></div>
-    <div class="col"><img src="assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord"></div>
+    <div class="col"><img src="../../../assets/images/Fietsbord%20logo.png" id="fietsbordlogo" alt="Fietsbord"></div>
   </div>
 
 
