--- a/scooter/src/app/app.component.html
+++ b/scooter/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Resources -->
-<app-header></app-header>
-<app-navbar></app-navbar>
+<app-headersb></app-headersb>
+<app-navbarsb></app-navbarsb>
 <router-outlet></router-outlet>
 
