--- a/scooter/src/app/sign-in/sign-in.component.html
+++ b/scooter/src/app/sign-in/sign-in.component.html
@@ -15,6 +15,6 @@
   <br>
   <h3>Current Token:</h3>
 
-    <textarea class="w-100 ">{{token}}</textarea>
-
+    <textarea class="w-100 " readonly >{{token}}</textarea>
+  <button (click)="refresh()">refresh</button>
 </div>
