--- a/scooter/src/app/navbars/navbarsb/navbarsb.component.html
+++ b/scooter/src/app/navbars/navbarsb/navbarsb.component.html
@@ -39,6 +39,11 @@
             Log in
           </a>
         </li>
+        <li *ngIf="loggedIn()" id="navRight3" class="nav-item">
+          <a class="nav-link" routerLink="/sign-out">
+            Log out
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
